--- a/server.html
+++ b/server.html
@@ -53,10 +53,10 @@
                     <script type="text/javascript" src="constant/version.js"></script>
                     <h3>客户端下载</h3>
                     <p>
-                        <a target="_blank" href="https://pan.quark.cn/s/b94b723c4ab8">夸克网盘</a>
+                        <a target="_blank" href="https://pan.quark.cn/s/2ad7cededca8">夸克网盘</a>
                     </p>
                     <h3>服务器介绍</h3>
-                    <p>欢迎加入我们的QQ群: <a target="_blank" href="https://pan.quark.cn/s/2ad7cededca8">579882505</a>
+                    <p>欢迎加入我们的QQ群: <a target="_blank" href="https://qm.qq.com/q/vKrsJNZsNG">579882505</a>
                     </p>
                     <p> 这是一个长期开放的原版纯净高版本生存服务器 <br>
                         <br> 保留了原汁原味的体验,仅有基础玩法经济等插件 <br>
