--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@ https://github.com/ranminecraft/Ranmcweb
     <div class="container">
         <div class="row">
             <div class="col-lg-12">
-                <h2>服务器列表 <br> 多种玩法提供选择 </h2>
+                <h2>服务器列表 <br> 提供更多资源下载 </h2>
             </div>
         </div>
         <div class="row">
@@ -356,7 +356,7 @@ https://github.com/ranminecraft/Ranmcweb
         <div class="tabs-container" style="margin-right: 100px">
             <h2>服务器后台</h2>
             <br>
-            <p>我们采用了专业的独立机服务器，拥有8核128G高配，不再担心服务器卡顿或过载，本服务器没有地图限制，不限制玩家跑图，只为给玩家更好的游戏体验。
+            <p>我们采用了专业的独立机服务器，拥有8核128G高配，不再担心服务器卡顿或过载，服务器采用针对性优化，不限制玩家跑图，只为给玩家更好的游戏体验。
             <p>
         </div>
     </div>
@@ -373,4 +373,5 @@ https://github.com/ranminecraft/Ranmcweb
 <script src="js/scripts.js"></script>
 <script type="text/javascript" src="constant/collect.js"></script>
 </body>
+
 </html>
