--- a/server.html
+++ b/server.html
@@ -53,7 +53,7 @@
                     <script type="text/javascript" src="constant/version.js"></script>
                     <h3>客户端下载</h3>
                     <p>
-                        <a target="_blank" href="https://pan.quark.cn/s/2ad7cededca8">夸克网盘</a>
+                        <a target="_blank" href="https://pan.baidu.com/s/1ALhAwDzWlyphdfB13vataA?pwd=6666">百度网盘</a>
                     </p>
                     <h3>服务器介绍</h3>
                     <p>欢迎加入我们的QQ群: <a target="_blank" href="https://qm.qq.com/q/vKrsJNZsNG">579882505</a>
