--- a/news.html
+++ b/news.html
@@ -49,7 +49,7 @@
                 </div>
                 <div class="text-container">
                     <h3>服务器守则</h3>
-                    <p> 1. 严禁利用游戏漏洞和作弊等恶劣手段谋利 <br> 2. 对于偷窃和破坏他人财产的熊孩子零容忍 <br> 3. 严禁恶意PVP恶意锁箱子圈地或强制拆迁 <br> 4. 请善待服务器，禁止无意义高频红石机器 <br> 5. 不要尝试触动别人底线，和谐相处很重要 <br> 一经查证违规和相关肇事玩家将被永久封禁 <br> 服务器遇到任何问题都可截图私聊群主解决 </p>
+                    <p> 1. 严禁利用游戏漏洞和作弊等恶劣手段谋利 <br> 2. 对于偷窃和破坏他人财产的熊孩子零容忍 <br> 3. 严禁恶意PVP恶意圈地或强制拆迁等行为 <br> 4. 请善待服务器，禁止无意义高频红石机器 <br> 5. 不要尝试触动别人底线，和谐相处很重要 <br> 一经查证违规和相关肇事玩家将被永久封禁 <br> 服务器遇到任何问题都可截图私聊群主解决 </p>
                 </div>
                 <div class="text-container">
                     <h3>服务器历史(2018-至今)</h3>
@@ -114,4 +114,5 @@
 <script src="js/scripts.js"></script>
 <script type="text/javascript" src="constant/collect.js"></script>
 </body>
+
 </html>
