--- a/shop.html
+++ b/shop.html
@@ -1,3 +1,4 @@
 <script language="javascript">
-  location.href="https://minepay.top/#/shop?id=101";
+  location.href="https://minepay.top/u/#/shop?id=101";
 </script>
+
