新增服务器页面在线玩家统计

--- a/server.html
+++ b/server.html
@@ -68,6 +68,9 @@
                         <br> 欢迎玩家提出意见或举报违规行为 <br>
                         <br> 请大家珍惜账号自觉遵守游戏规则
                     </p>
+                    <div class="text-container">
+                        <canvas id="onlineChart" height="120"></canvas>
+                    </div>
                     <h3>截图欣赏</h3>
                     <img class="img-fluid" src="img/a4V6BQ.jpg" alt="alternative" style="margin-bottom:1rem" width="640" height="360px">
                     <p>古风的建筑风格，美在神秘，美在天然。 <br>
@@ -101,6 +104,8 @@
 </div>
 <script type="text/javascript" src="constant/footer.js"></script>
 <script src="js/jquery.min.js"></script>
+<script src="js/chart.js"></script>
+<script src="js/server.js"></script>
 <script src="js/bootstrap.min.js"></script>
 <script src="js/jquery.easing.min.js"></script>
 <script src="js/swiper.min.js"></script>
