--- a/status.html
+++ b/status.html
@@ -68,35 +68,7 @@
         </div>
     </div>
 </div>
-<div class="footer">
-    <div class="container">
-        <div class="row">
-            <div class="col-md-6">
-                <div class="text-container about">
-                    <h4>关于更多</h4>
-                    <p style="color:#dfe5ec;margin-bottom:0rem">运营By <a href="https://jq.qq.com/?_wv=1027&k=XokgrsUK">阿然</a>
-                    </p>
-                    <p style="color:#dfe5ec;margin-bottom:0rem">美工By <a href="https://jq.qq.com/?_wv=1027&k=XokgrsUK">阿然</a>
-                    </p>
-                    <p style="color:#dfe5ec;margin-bottom:0rem">建筑By <a href="https://jq.qq.com/?_wv=1027&k=XokgrsUK">光圈</a>
-                    </p>
-                </div>
-            </div>
-        </div>
-    </div>
-</div>
-<div class="copyright">
-    <div class="container">
-        <div class="row">
-            <div class="col-lg-12">
-                <p style="color:#dfe5ec;margin-bottom:0rem"> 友情外链&nbsp; <a target="_blank" href="https://minecraft.net/">Minecraft</a>&nbsp;&nbsp; <a target="_blank" href="https://minepay.top/">MinePay</a>&nbsp;&nbsp; <a target="_blank" href="https://www.anzifan.com/">AnZiFan</a>
-                </p>
-                <p class="p-small">开源许可 MIT License Copyright &copy; 2023 <a target="_blank" href="https://github.com/ranminecraft/Ranmcweb">阿然姐姐</a>
-                </p>
-            </div>
-        </div>
-    </div>
-</div>
+<script type="text/javascript" src="constant/footer.js"></script>
 <script src="js/jquery.min.js"></script>
 <script src="js/chart.js"></script>
 <script src="js/status.js"></script>
