优化服务器页面

--- a/server.html
+++ b/server.html
@@ -68,8 +68,8 @@
                         <br> 欢迎玩家提出意见或举报违规行为 <br>
                         <br> 请大家珍惜账号自觉遵守游戏规则
                     </p>
-                    <div class="text-container">
-                        <canvas id="onlineChart" height="120"></canvas>
+                    <div class="text-container" style="max-width:680px">
+                        <canvas id="onlineChart" height="130"></canvas>
                     </div>
                     <h3>截图欣赏</h3>
                     <img class="img-fluid" src="img/a4V6BQ.jpg" alt="alternative" style="margin-bottom:1rem" width="640" height="360px">
