新增服务器线路状态

--- a/chart.html
+++ b/chart.html
@@ -44,12 +44,12 @@
         <div class="row">
             <div class="col-lg-12">
                 <div class="text-container">
+                    <h5 id="serverStatus"></h5>
+                    <br><br>
                     <canvas id="tpsChart" height="120"></canvas>
-                </div>
-                <div class="text-container">
+                    <br><br>
                     <canvas id="seasonChart" height="120"></canvas>
-                </div>
-                <div class="text-container">
+                    <br><br>
                     <canvas id="pvpChart" height="120"></canvas>
                 </div>
             </div>
