--- a/chart.html
+++ b/chart.html
@@ -44,7 +44,7 @@
         <div class="row">
             <div class="col-lg-12">
                 <div class="text-container">
-                    <h5 id="serverStatus"></h5>
+                    <div id="serverStatus"></div>
                     <br><br>
                     <canvas id="tpsChart" height="120"></canvas>
                     <br><br>
