--- a/chart.html
+++ b/chart.html
@@ -43,8 +43,8 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-12">
-                <div class="text-container">
-                    <div id="serverStatus"></div>
+                <div class="text-container" style="max-width:960px">
+                    <div id="serverStatus">获取服务器信息中...</div>
                     <br><br>
                     <canvas id="tpsChart" height="120"></canvas>
                     <br><br>
