--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@ https://github.com/ranminecraft/Ranmcweb
                     <div class="card-body">
                         <h3 class="card-title">纯净生存 <script type="text/javascript" src="constant/version.js"></script>
                         </h3>
-                        <p>原版纯净高版本生存服务器,保留原汁原味玩法,享受田园生活,仅有基础玩法领地 商店 称号 砍树等插件。</p>
+                        <p>原版纯净高版本生存服务器,保留原汁原味玩法,享受田园生活,仅有基础玩法领地、商店、称号等插件。</p>
                         <p class="price">
                             <a style="color:#484a46" href="server.html">详情</a>
                         </p>
@@ -375,3 +375,4 @@ https://github.com/ranminecraft/Ranmcweb
 </body>
 
 </html>
+
