--- a/index.html
+++ b/index.html
@@ -356,7 +356,7 @@ https://github.com/ranminecraft/Ranmcweb
         <div class="tabs-container" style="margin-right: 100px">
             <h2>服务器后台</h2>
             <br>
-            <p>我们采用了专业的独立机服务器，拥有8核128G高配，不再担心服务器卡顿或过载，服务器采用针对性优化，不限制玩家跑图，只为给玩家更好的游戏体验。
+            <p>我们采用了专业的独立机服务器，拥有8核128G高配，不再担心服务器卡顿或过载，服务器采用针对性优化，多个线路自动切换保证网络稳定可用，只为给玩家更好的游戏体验。
             <p>
         </div>
     </div>
